# aria-agent

./: .gitignore  README.md  SKILLS.md  aria  install.sh  main.py  requirements.txt
bench/: README.md  pyproject.toml
bench/aria-results/2026-03-30__10-49-58/: config.json  result.json
bench/aria-results/2026-03-30__10-49-58/break-filter-js-from-html__zcRQVZW/: config.json  result.json
bench/aria-results/2026-03-30__10-49-58/break-filter-js-from-html__zcRQVZW/verifier/: ctrf.json  test-stdout.txt
bench/aria-results/2026-03-30__10-49-58/gpt2-codegolf__WWmoe4B/: config.json  exception.txt  result.json
bench/aria-results/2026-03-30__10-49-58/llm-inference-batching-scheduler__FPKCHdt/: config.json  exception.txt  result.json
bench/aria-results/2026-03-30__10-49-58/reshard-c4-data__nKaDHzx/: config.json  result.json
bench/aria-results/2026-03-30__10-49-58/write-compressor__Fhmt5Cn/: config.json  result.json
bench/src/aria_terminal_bench/: __init__.py  aria_agent.py  install-aria.sh.j2  terminal_agent.py
bench/test-oracle/2026-03-30__10-46-13/: config.json  result.json
bench/test-oracle/2026-03-30__10-46-13/gpt2-codegolf__yhgUJGL/: config.json  exception.txt  result.json
bench/test-oracle/2026-03-30__10-46-13/llm-inference-batching-scheduler__xJmEtmm/: config.json  exception.txt  result.json
bench/test-oracle/2026-03-30__10-47-25/: config.json  result.json
bench/test-oracle/2026-03-30__10-47-25/gpt2-codegolf__FjdoVbF/: config.json  result.json
bench/test-oracle/2026-03-30__10-47-25/llm-inference-batching-scheduler__6cCk69m/: config.json  result.json
(+37 files in other folders)
